--- a/expert_cpp/expert_cpp/expert_cpp.vcxproj.filters
+++ b/expert_cpp/expert_cpp/expert_cpp.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="리소스 파일">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
@@ -55,6 +51,12 @@
     <Filter Include="MySource\Chapter17">
       <UniqueIdentifier>{7b7fa9bc-f377-46e5-84ec-511f79940be3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Default">
+      <UniqueIdentifier>{2473b694-488f-4880-b112-ff4622624cba}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="MySource\Chapter17\Person">
+      <UniqueIdentifier>{2e62f12a-24ca-4967-8403-8beda77eb825}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -75,22 +77,16 @@
     <ClCompile Include="Exercise.cpp">
       <Filter>MySource\Chapter19\Exercise</Filter>
     </ClCompile>
+    <ClCompile Include="MoveableClass.cpp">
+      <Filter>MySource\Chapter17</Filter>
+    </ClCompile>
+    <ClCompile Include="CPerson.cpp">
+      <Filter>MySource\Chapter17\Person</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="template.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="DataHolder.h">
       <Filter>MySource\Chpater9</Filter>
-    </ClInclude>
-    <ClInclude Include="pch.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="framework.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="standard_function.h">
       <Filter>MySource\Chapter19\std::fucntion</Filter>
@@ -110,20 +106,11 @@
     <ClInclude Include="FunctionObjects.h">
       <Filter>MySource\Chapter19\FunctionPointer</Filter>
     </ClInclude>
-    <ClInclude Include="Arthimetic.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="ComparisonFunctionObjects.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Hasher.h">
       <Filter>MySource\Chapter19\ComparisonFunctionObjects</Filter>
     </ClInclude>
     <ClInclude Include="LogicalFunc.h">
       <Filter>MySource\Chapter19\LogicalFunction</Filter>
-    </ClInclude>
-    <ClInclude Include="Binders.h">
-      <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Handler.h">
       <Filter>MySource\Chapter19\Handler</Filter>
@@ -136,6 +123,39 @@
     </ClInclude>
     <ClInclude Include="Iterator_Traits.h">
       <Filter>MySource\Chapter17</Filter>
+    </ClInclude>
+    <ClInclude Include="reverse_iterator.h">
+      <Filter>MySource\Chapter17</Filter>
+    </ClInclude>
+    <ClInclude Include="MoveableClass.h">
+      <Filter>MySource\Chapter17</Filter>
+    </ClInclude>
+    <ClInclude Include="Arthimetic.h">
+      <Filter>Default</Filter>
+    </ClInclude>
+    <ClInclude Include="Binders.h">
+      <Filter>Default</Filter>
+    </ClInclude>
+    <ClInclude Include="ComparisonFunctionObjects.h">
+      <Filter>Default</Filter>
+    </ClInclude>
+    <ClInclude Include="framework.h">
+      <Filter>Default</Filter>
+    </ClInclude>
+    <ClInclude Include="global.h">
+      <Filter>Default</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>Default</Filter>
+    </ClInclude>
+    <ClInclude Include="targetver.h">
+      <Filter>Default</Filter>
+    </ClInclude>
+    <ClInclude Include="template.h">
+      <Filter>Default</Filter>
+    </ClInclude>
+    <ClInclude Include="CPerson.h">
+      <Filter>MySource\Chapter17\Person</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
