--- a/expert_cpp/expert_cpp/expert_cpp.vcxproj
+++ b/expert_cpp/expert_cpp/expert_cpp.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="standard_function.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="template.h" />
+    <ClInclude Include="view.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
