Template of Grid

--- a/expert_cpp/expert_cpp/expert_cpp.vcxproj
+++ b/expert_cpp/expert_cpp/expert_cpp.vcxproj
@@ -134,8 +134,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Binders.cpp" />
+    <ClCompile Include="ChessPiece.cpp" />
     <ClCompile Include="CPerson.cpp" />
     <ClCompile Include="Exercise.cpp" />
+    <ClCompile Include="GameBoard.cpp" />
+    <ClCompile Include="GamePiece.cpp" />
+    <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Hasher.cpp" />
     <ClCompile Include="main.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
@@ -153,10 +157,14 @@
     <ClInclude Include="Binders.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="ChessPiece.h" />
     <ClInclude Include="ComparisonFunctionObjects.h" />
     <ClInclude Include="CPerson.h" />
     <ClInclude Include="FunctionObjects.h" />
+    <ClInclude Include="GameBoard.h" />
+    <ClInclude Include="GamePiece.h" />
     <ClInclude Include="global.h" />
+    <ClInclude Include="Grid.h" />
     <ClInclude Include="Handler.h" />
     <ClInclude Include="Hasher.h" />
     <ClInclude Include="Invokers.h" />
